fixed send message api endpoint and added tests
