# src/Message/Command/SendMessageHandler.php
@@ -4,29 +4,27 @@ declare(strict_types=1);
 namespace App\Message\Command;
 
 use App\Entity\Message;
-use Doctrine\ORM\EntityManagerInterface;
+use App\Enum\MessageStatusEnum;
+use App\Repository\MessageRepositoryInterface;
 use Symfony\Component\Messenger\Attribute\AsMessageHandler;
-use Symfony\Component\Uid\Uuid;
 
 #[AsMessageHandler]
-/**
- * TODO: Cover with a test
- */
 class SendMessageHandler
 {
-    public function __construct(private EntityManagerInterface $manager)
+    public function __construct(
+        private MessageRepositoryInterface $messageRepository
+    )
     {
     }
     
     public function __invoke(SendMessage $sendMessage): void
     {
-        $message = new Message();
-        $message->setUuid(Uuid::v6()->toRfc4122());
-        $message->setText($sendMessage->text);
-        $message->setStatus('sent');
-        $message->setCreatedAt(new \DateTime());
+        $message = Message::make(
+            $sendMessage->getUuid(),
+            $sendMessage->getText(),
+            MessageStatusEnum::SENT
+        );
 
-        $this->manager->persist($message);
-        $this->manager->flush();
+        $this->messageRepository->save($message);
     }
 }
